# quarkbackend

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 214d67065a11_added_score_credito_to_user_and_other_.py  3239be2dee11_added_transactions_and_credit_searches_.py  3527449eba98_initial_complete_schema.py  6c93c7b01c14_.py  7cec6f592a7a_create_missing_ledger_and_search_tables.py  9364ba73fd23_create_missing_ledger_and_search_tables.py  b79a3a103705_initial_full_schema.py
app/: main.py  models.py  schemas.py
app/api/v1/: admin.py  auth.py  loans.py  marketplace.py  user.py  wallet.py
app/core/: config.py  security.py
